Se maqueto main

--- a/index.html
+++ b/index.html
@@ -18,7 +18,26 @@
         </nav>
     </header>
     <main>
+        <section class="main-logo">
+            <img src="" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input__container">
+                <span class="main-input__container--search-icon">
 
+                </span>
+                <input type="text">
+                <a class="main-input__container--micro-icon" href=""></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+            <div class="main-buttons__search">
+                <button>Buscar con Google</button>
+            </div>
+            <div class="main-buttons__lucky">
+                <button>Me siento con suerte</button>
+            </div>
+        </section>
     </main>
     <footer>
 
