Se terminaron de estilizar los elementos

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="main-logo">
-            <img src="" alt="">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
         </section>
         <section class="main-input">
             <div class="main-input__container">
                 <span class="main-input__container--search-icon">
-
+                    <img src="https://img.icons8.com/fluent-systems-regular/24/000000/search.png"/>
                 </span>
                 <input type="text">
-                <a class="main-input__container--micro-icon" href=""></a>
+                <a class="main-input__container--micro-icon" href=""><img src="https://img.icons8.com/android/24/000000/microphone.png"/></a>
             </div>
         </section>
         <section class="main-buttons">
@@ -39,6 +40,7 @@
             </div>
         </section>
     </main>
+
     <footer>
 
     </footer>
