--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="">Gmail</a></li>
                 <li><a href="">Imágenes</a></li>
                 <li class="nav-right-section__menu-icon"><a href=""></a></li> <!-- No le pusimos una etiqueta img porque no va a generar interactividad, por eso usamos background-image con CSS -->
-                <li><a href=""><button class="nav-right-section__button-session">Iniciar sesión</button></a></li> <!-- Vamos a generar un boton de inicio de sesion-->
+                <li><a href="https://accounts.google.com/ServiceLogin?hl=es-419&passive=true&continue=https://www.google.com/&ec=GAZAAQ"><button class="nav-right-section__button-session">Iniciar sesión</button></a></li> <!-- Vamos a generar un boton de inicio de sesion-->
             </ul>
         </nav>
     </header>
@@ -25,10 +25,9 @@
         <section class="main-input">
             <div class="main-input__container">
                 <span class="main-input__container--search-icon">
-                    <img src="https://img.icons8.com/fluent-systems-regular/24/000000/search.png"/>
                 </span>
                 <input type="text">
-                <a class="main-input__container--micro-icon" href=""><img src="https://img.icons8.com/android/24/000000/microphone.png"/></a>
+                <a class="main-input__container--micro-icon" href=""><span class="main-input__container--tooltiptext">B&uacute;squeda por voz</span></a>
             </div>
         </section>
         <section class="main-buttons">
@@ -42,7 +41,22 @@
     </main>
 
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-container__country">M&eacute;xico</div>
+            <div class="footer-container__others">
+                <ul class="footer-container__others--left">
+                    <li><a href="https://www.google.com/intl/es-419_mx/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a></li>
+                    <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Negocios</a></li>
+                    <li><a href="https://about.google/?utm_source=google-MX&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre Google</a></li>
+                    <li><a href="https://google.com/search/howsearchworks/?fg=1">C&oacute;mo funciona la B&uacute;squeda</a></li>
+                </ul>
+                <ul class="footer-container__others--right">
+                    <li><a href="https://policies.google.com/privacy?hl=es-419&fg=1">Privacidad</a></li>
+                    <li><a href="https://policies.google.com/terms?hl=es-419&fg=1">Condiciones</a></li>
+                    <li><a href="https://www.google.com/preferences?hl=es-419">Preferencias</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
